Updated Long test