@@ -2,8 +2,7 @@ public class LongTest{
 	
 	public static void main(String[] args) {
 		long l = 123;
-		//Long l1 = Long.valueOf("42");
-		Long l2 = new Long();
-		int i1 = l2.intValue();
+		Long l1 = new Long();
+		int i1 = l1.intValue();
 	}
 }
